Bug fixes Update proto Applied dependency latest changes
